warning fix
git-svn-id: http://code.jaspersoft.com/svn/repos/jasperreports/trunk@3684 76e25fc1-081a-0410-bb1b-c96bc70638b7